--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,7 +458,7 @@ h6 {
 
 #hero {
     width: 100%;
-    background: url(/assets/img/home-page-img.jpeg);
+    background: url("../assets/img/home-page-img.jpeg");
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.5);
     position: relative;
